WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95143
IndexedDB: Throw TypeError for invalid version parameters
https://bugs.webkit.org/show_bug.cgi?id=95143
Summary
IndexedDB: Throw TypeError for invalid version parameters
David Grogan
Reported
2012-08-27 15:38:20 PDT
IndexedDB: Throw TypeError for invalid version parameters
Attachments
Patch
(5.95 KB, patch)
2012-08-27 15:41 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-07
(371.86 KB, application/zip)
2012-08-27 16:44 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.90 KB, patch)
2012-08-28 20:56 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Grogan
Comment 1
2012-08-27 15:41:48 PDT
Created
attachment 160829
[details]
Patch
David Grogan
Comment 2
2012-08-27 15:43:13 PDT
Josh, could you take a look at this?
Joshua Bell
Comment 3
2012-08-27 15:51:44 PDT
Comment on
attachment 160829
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160829&action=review
lgtm
> Source/WebCore/ChangeLog:8 > + Still need to throw for -1, but developers are running into the string
This could probably be clearer for readers unfamiliar with the reported bug.
> Source/WebCore/Modules/indexeddb/IDBFactory.cpp:115 > + // this to avoid wanting to throw an error with the sentinal.
Spelling: "sentinel"
WebKit Review Bot
Comment 4
2012-08-27 16:44:02 PDT
Comment on
attachment 160829
[details]
Patch
Attachment 160829
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13637086
New failing tests: http/tests/inspector/indexeddb/resources-panel.html http/tests/inspector/indexeddb/database-data.html http/tests/inspector/indexeddb/database-names.html http/tests/inspector/indexeddb/database-structure.html
WebKit Review Bot
Comment 5
2012-08-27 16:44:05 PDT
Created
attachment 160854
[details]
Archive of layout-test-results from gce-cr-linux-07 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
David Grogan
Comment 6
2012-08-28 20:56:46 PDT
Created
attachment 161126
[details]
Patch
David Grogan
Comment 7
2012-08-29 11:55:54 PDT
Tony, could you review this?
WebKit Review Bot
Comment 8
2012-08-29 14:16:59 PDT
Comment on
attachment 161126
[details]
Patch Clearing flags on attachment: 161126 Committed
r127049
: <
http://trac.webkit.org/changeset/127049
>
WebKit Review Bot
Comment 9
2012-08-29 14:17:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug