IndexedDB: Throw TypeError for invalid version parameters https://bugs.webkit.org/show_bug.cgi?id=95143

Reviewed by Tony Chang.

Source/WebCore:

Still need to throw for -1, but developers are running into the string
scenario so handling that is more urgent. See
https://groups.google.com/a/chromium.org/forum/?fromgroups=#!topic/chromium-html5/QvjsPbBdP4M

Test: storage/indexeddb/intversion-bad-parameters.html

* Modules/indexeddb/IDBFactory.cpp:
(WebCore::IDBFactory::open):

LayoutTests:

* http/tests/inspector/indexeddb/indexeddb-test.js:
Remove 0 as a version parameter now that it will throw TypeError. It
should have been a no-op anyway.

* storage/indexeddb/intversion-bad-parameters-expected.txt: Added.
* storage/indexeddb/intversion-bad-parameters.html: Added.
* storage/indexeddb/resources/intversion-bad-parameters.js: Added.
(test):
(deleteSuccess):


Canonical link: https://commits.webkit.org/113222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127049 268f45cc-cd09-0410-ab3c-d52691b4dbfc